[tool.poetry]
name = "smart_investor"
version = "0.0.1"
description = "ML-based solution to automate investment strategy on stock market"
authors = ["FrostRaptor <fquenton.letort@gmail.com>"]
repository = "https://github.com/frostraptor/smart-investor"
documentation = "https://frostraptor.github.io/smart-investor/"
readme = "README.md"
packages = [
  {include = "smart_investor"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = "^3.12.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.11.0"
mypy = "^1.7.1"
pytest = "^7.4.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    'tests'
]
